# Back-Vtrende

./: .gitignore  main.py  pyproject.toml
accounts/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
alembic/: env.py
auth/: depends.py  exceptions.py  facade.py  helpers.py  models.py  providers.py  repositories.py  router.py  schemas.py  services.py
cart/: models.py  repositories.py  router.py  schemas.py  services.py
categories/: exceptions.py  facade.py  mappers.py  models.py  repositories.py  router.py  schemas.py  services.py
chats/: exceptions.py  facade.py  mappers.py  models.py  repositories.py  router.py  schemas.py  services.py
core/: celery.py  container.py  database.py  email_sender.py  environment.py  exceptions.py  logger.py  middlewares.py  nominatim.py  redis_client.py  repositories.py  schemas.py  socketio_server.py  tasks.py  utils.py
deploy/: .env.template
dev_tools/: .env.dev  Dockerfile  docker-compose-local.yml  docker-compose-server.yml
favorites/: models.py  repositories.py  router.py  schemas.py  services.py
items/: exceptions.py  models.py  repositories.py  router.py  schemas.py  services.py
letsencrypt_scripts/: dev-back.sh  dev-front.sh  prod-back-ge.sh  prod-back-ru.sh  prod-front-ge.sh  prod-front-ru.sh
listings/: facade.py  mappers.py  repositories.py  router.py  schemas.py  services.py
localization/: facade.py  mappers.py  models.py  repositories.py  router.py  schemas.py  services.py
locations/: mappers.py  models.py  repositories.py  schemas.py  services.py
nginx/: nginx_certs.conf  nginx_dev.conf
notifications/: exceptions.py  facade.py  mappers.py  models.py  repositories.py  router.py  schemas.py  services.py
orders/: models.py  repositories.py  router.py  schemas.py  services.py
payments/: facade.py  router.py  schemas.py  services.py
promotions/: facade.py  mappers.py  models.py  repositories.py  router.py  schemas.py  services.py
ratings/: exceptions.py  facade.py  mappers.py  models.py  repositories.py  schemas.py  services.py
recommendations/: facade.py  mappers.py  models.py  schemas.py  (+2 more)
(+26 files in other folders)
